tests/cases/control-flow/ok/while-true-break-owner-state.ari
fn main() -> i64 {
  let token: own i64 = 5;
  while true {
    drop token;
    break;
  }
  return 0;
}
