tests/cases/control-flow/errors/labeled-block-ownership-state.ari
fn main() -> i64 {
  let token: own i64 = 5;
  let value = done: {
    while true {
      break done 1;
    }
    drop token;
    2
  };
  return value;
}
